[project]
name = "payment-service"
version = "0.1.0"
description = "Асинхронный сервис процессинга платежей"
authors = [
    {name = "qwen.ai[bot]",email = "qwenlm-intl@service.alibaba.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.109.0)",
    "pydantic (>=2.0.0)",
    "pydantic-settings (>=2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.0)",
    "asyncpg (>=0.29.0)",
    "alembic (>=1.13.0)",
    "faststream[rabbit] (>=0.4.0)",
    "aiohttp (>=3.9.0)",
    "uvicorn[standard] (>=0.27.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
